<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    tools:context=".BoxFragment"
    android:orientation="vertical"
    android:background="#bbffbb"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/valueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/this_is_a_box"
        android:fontFamily="casual"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/goBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"/>

    <Button
        android:id="@+id/openSecret"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_secret"/>

    <Button
        android:id="@+id/generateNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_number"/>


</LinearLayout>